[gd_scene load_steps=5 format=2]

[ext_resource path="res://lib/CirclePath.gd" type="Script" id=1]
[ext_resource path="res://assets/ball.png" type="Texture" id=2]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 22.673, 0, -22.673, 0, 0, 32, 0.411893, 14.74, -0.411893, -14.74, -32, 0, -21.6135, -0.426499, 21.6135, 0.426499, 0, -32, 0.0129744, -16.599, -0.0129744, 16.599, 32, 0, 23.5027, 0.0486216, -23.5027, -0.0486216, 0, 32 )
}

[sub_resource type="Animation" id=2]
resource_name = "turn"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PathFollower:unit_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="CirclePath" type="Path2D"]
self_modulate = Color( 0.941176, 0.92549, 0.901961, 0.701961 )
position = Vector2( -245.488, 10.2189 )
curve = SubResource( 1 )
script = ExtResource( 1 )

[node name="PathFollower" type="PathFollow2D" parent="."]
show_behind_parent = true
position = Vector2( 3.36384, 31.8987 )
offset = 200.129
rotate = false

[node name="Position2D" type="Position2D" parent="PathFollower"]

[node name="Sprite" type="Sprite" parent="PathFollower/Position2D"]
rotation = -6.28319
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_process_mode = 0
method_call_mode = 1
anims/turn = SubResource( 2 )

[node name="X" type="Label" parent="."]
visible = false
margin_left = -16.0
margin_top = -24.0
margin_right = 24.0
margin_bottom = -10.0
text = "X:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="x" type="Label" parent="X"]
margin_left = 16.0
margin_right = 56.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Y" type="Label" parent="."]
visible = false
margin_left = -16.0
margin_top = -8.0
margin_right = 24.0
margin_bottom = 6.0
text = "Y:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="y" type="Label" parent="Y"]
margin_left = 16.0
margin_right = 56.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Out" type="Label" parent="."]
visible = false
margin_left = -16.0
margin_top = 8.0
margin_right = 24.0
margin_bottom = 22.0
text = "->"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="out" type="Label" parent="Out"]
margin_left = 16.0
margin_right = 56.0
margin_bottom = 14.0
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XSlider" type="HSlider" parent="."]
margin_left = -26.512
margin_top = 45.7811
margin_right = 33.488
margin_bottom = 61.7811
max_value = 1.0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Position2D" type="Position2D" parent="XSlider"]
modulate = Color( 0.654902, 0.929412, 0.0470588, 1 )
position = Vector2( 7.99999, 8 )

[node name="YSlider" type="HSlider" parent="."]
margin_left = 37.488
margin_top = 29.7811
margin_right = 97.488
margin_bottom = 45.7811
rect_rotation = -89.9999
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 1.0
allow_greater = true
allow_lesser = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="YSlider"]
modulate = Color( 0.654902, 0.929412, 0.0470588, 1 )
position = Vector2( 7.9891, 7.88501 )
rotation = 1.57079
[connection signal="value_changed" from="XSlider" to="." method="_on_XSlider_value_changed"]
[connection signal="value_changed" from="YSlider" to="." method="_on_YSlider_value_changed"]
